--- a/HomeMates/VIew/Task/TaskListTableViewCell.xib
+++ b/HomeMates/VIew/Task/TaskListTableViewCell.xib
@@ -26,7 +26,7 @@
                         <color key="textColor" name="Y4"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="DYp-d8-E6Z">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="DYp-d8-E6Z">
                         <rect key="frame" x="16" y="0.0" width="48" height="97.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="48" id="iyJ-bd-qNC"/>
