--- a/HomeMates/VIew/Loading.storyboard
+++ b/HomeMates/VIew/Loading.storyboard
@@ -19,13 +19,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="rVq-Vp-Nmu">
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rVq-Vp-Nmu">
                                 <rect key="frame" x="107" y="447" width="200" height="2"/>
-                                <color key="tintColor" name="Y2"/>
+                                <color key="backgroundColor" name="Y2"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="OlG-2L-50B"/>
                                 </constraints>
-                                <color key="trackTintColor" name="P1"/>
+                                <color key="progressTintColor" name="P1"/>
                             </progressView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
