--- a/HomeMates/VIew/Statistics/PointGoalTableViewCell.xib
+++ b/HomeMates/VIew/Statistics/PointGoalTableViewCell.xib
@@ -46,7 +46,7 @@
                     </label>
                     <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jfx-5C-yjY">
                         <rect key="frame" x="76" y="116.5" width="225" height="6"/>
-                        <color key="backgroundColor" name="Y1"/>
+                        <color key="backgroundColor" red="0.9882352941176471" green="0.8784313725490196" blue="0.46274509803921571" alpha="0.38222388698630139" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="6" id="iNP-as-cvm"/>
                         </constraints>
@@ -90,9 +90,6 @@
         <image name="profile" width="24" height="24"/>
         <namedColor name="P1">
             <color red="0.62000000476837158" green="0.2199999988079071" blue="0.32499998807907104" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="Y1">
-            <color red="0.97254901960784312" green="0.81176470588235294" blue="0.21176470588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Y4">
             <color red="0.29019607843137257" green="0.22352941176470589" blue="0.18431372549019609" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
