--- a/HomeMates/VIew/Task.storyboard
+++ b/HomeMates/VIew/Task.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HZO-iu-qGs">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fxI-zm-ekD">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -46,17 +46,17 @@
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="3x3-6Y-jpy" id="OLd-jn-9na"/>
-                        <segue destination="EAY-Hn-gKg" kind="show" identifier="AddTaskSegue" id="p5j-pk-oRE"/>
+                        <segue destination="fxI-zm-ekD" kind="show" identifier="AddTaskSegue" id="p5j-pk-oRE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ban-gq-fe6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.2" y="112.89355322338831"/>
         </scene>
-        <!--任務管理-->
+        <!--任務列表-->
         <scene sceneID="h53-aU-Xbh">
             <objects>
-                <viewController hidesBottomBarWhenPushed="YES" id="EAY-Hn-gKg" customClass="TaskSettingsViewController" customModule="HomeMates" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="EAY-Hn-gKg" customClass="TaskSettingsViewController" customModule="HomeMates" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aYJ-ub-Uda">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -80,14 +80,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ZEF-0J-MQS"/>
                     </view>
-                    <navigationItem key="navigationItem" title="任務管理" id="wll-st-0QS"/>
+                    <navigationItem key="navigationItem" title="任務列表" id="wll-st-0QS"/>
                     <connections>
                         <outlet property="tableView" destination="GrO-Ll-dP5" id="T3r-BA-1OD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GaW-a9-r5m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1895" y="113"/>
+            <point key="canvasLocation" x="3244" y="98"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6JW-UH-Nf6">
@@ -109,6 +109,27 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3UA-66-YlH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="108" y="112.89355322338831"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="B8o-4A-EP6">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fxI-zm-ekD" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xLd-4s-UnL">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.29019607843137257" green="0.22352941176470589" blue="0.18431372549019609" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="EAY-Hn-gKg" kind="relationship" relationship="rootViewController" id="06A-mQ-stV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lGc-wP-vvw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2421.5999999999999" y="97.601199400299862"/>
         </scene>
     </scenes>
     <resources>
