Remove duplicate items

--- a/HomeMates/VIew/Auth.storyboard
+++ b/HomeMates/VIew/Auth.storyboard
@@ -306,8 +306,9 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dbV-Bx-6zg">
                                         <rect key="frame" x="40" y="98" width="200" height="36"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nw9-2k-pbA">
+                                            <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nw9-2k-pbA">
                                                 <rect key="frame" x="0.0" y="0.0" width="100" height="36"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <state key="normal" title="搜尋群組">
                                                     <color key="titleColor" name="Y4"/>
                                                 </state>
@@ -318,11 +319,12 @@
                                                     <action selector="onChangeInfo:" destination="2x1-Nv-VlG" eventType="touchUpInside" id="P73-W7-0ve"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bLF-vh-RZg">
+                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bLF-vh-RZg">
                                                 <rect key="frame" x="100" y="0.0" width="100" height="36"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="100" id="bwQ-dv-nuo"/>
                                                 </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <state key="normal" title="創立新群組">
                                                     <color key="titleColor" name="Y4"/>
                                                 </state>
