--- a/HomeMates/VIew/More.storyboard
+++ b/HomeMates/VIew/More.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--More View Controller-->
+        <!--關於-->
         <scene sceneID="imJ-os-ly6">
             <objects>
                 <viewController id="rRR-Y5-Krl" customClass="MoreViewController" customModule="HomeMates" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,7 +20,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="hyA-vF-ii2"/>
                     </view>
-                    <navigationItem key="navigationItem" id="hLz-eh-4iC"/>
+                    <navigationItem key="navigationItem" title="關於" id="hLz-eh-4iC"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n6n-wL-liB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -34,6 +34,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Rjm-2M-O16">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.29019607843137257" green="0.22352941176470589" blue="0.18431372549019609" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
